# ArgumentClinic

./: README.md  app.py  conversation_manager.py  main.py  pyproject.toml  rules.json  rules_manager.py  session_timer.py  timer_manager.py
argument_clinic/: context_manager.py  conversation_manager.py  sentiment_analysis.py  user_profile.py
data/: responses.json
rules_manager/: rules.json  rules_manager.py
static/: guide.json  script.js  style.css
static/css/: styles.css
static/js/: script.js
templates/: index.html
